--- a/index.html
+++ b/index.html
@@ -4,58 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SottaPedia</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>CARTEL</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Cabeçalho -->
-<header>
-    <nav>
-        <h1 class="titulo-site">SottaPedia</h1>
-        <ul class="bnt-site">
-            <li class="bnt-site1"><a href="#" id="bnt-1">Home</a></li>
-            <li class="bnt-site1"><a href="#" id="bnt-1">Busca</a></li>
-            <li class="bnt-site1"><a href="#" id="bnt-1">Cadastrar</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <h1>Galeria dos Sneakers</h1>
+    </header>
 
-    <!-- Informações -->
-    <div class="titulo-info">
-        <h1 class="info1">Jahseh Dwayne Onfroy</h1>
-        <h2 class="info2">(XXXTentacion)</h2>
-    </div>
-    <main>
-        <section>
-            <div>
-                <div class="imagem" id="photo"></div>
-                <h3 class="subt">Resumo</h3>
-                <p class="parag">Ele foi criado com a avó, por causa da situação financeira da mãe. X tinha ascendência alemã, síria, indiana, jamaicana e italiana. Quando tinha seis anos, esfaqueou um homem que estava tentando atacar a sua mãe. Ele acabou sendo colocado em um programa juvenil antes de ser "forçado" a viver com a sua avó.</p>
-            </div>
-            <div>
-                <h3 class="subt">A Fama de X</h3>
-                <p class="parag">Ele começou a compor música após ser liberado de um centro de correção para jovens. Em junho de 2013, lançou a primeira canção na plataforma de distribuição de áudio SoundCloud, intitulada "News/Flock". Foi uma figura popular como um artista do gênero trap, que usa elementos da música lo-fi e hard 808s. Também ficou conhecido por ter um estilo de música deprimente.
 
-                    Em agosto de 2017, Onfroy lançou o seu primeiro álbum 17, que inclui os singles "Revenge" e "Jocelyn Flores". Em março de 2018, lançou o seu segundo álbum ?, estreando no topo do ranking Billboard 200 (dos Estados Unidos) e o seu single "Sad!" alcançando o topo da Billboard Hot 100.
-                    
-                    Em junho de 2018, ao sair de uma concessionária de motocicletas em Miami, Onfroy recebeu vários disparos provenientes de uma SUV escura, cujos responsáveis fugiram em seguida. O rapper foi declarado morto logo após chegar a um hospital local.</p>
-            </div>
-        </section>
-    </main>
+    <!-- Grid de Produtos -->
+<main class="container">
+    <section class="produts-container">
+        <div class="card">
+            <div class="product-image" id="img-1"></div>
+            <h3>Sneaker 1</h3>
+            <p>Sneaker da melhor qualidade ... (ler mais!)</p>
+            <p>R$ <span class="bold">157,89</span></p>
+            <a href="#" class="btn">Comprar</a>
+        </div>
+        <div class="card">
+            <div class="product-image" id="img-2 "></div>
+            <h3>Sneaker 2</h3>
+            <p>Sneaker da melhor qualidade ... (ler mais!)</p>
+            <p>R$ <span class="bold">157,89</span></p>
+            <a href="#" class="btn">Comprar</a>
+        </div>
+        <div class="card">
+            <div class="product-image" id="img-3"></div>
+            <h3>Sneaker 3</h3>
+            <p>Sneaker da melhor qualidade ... (ler mais!)</p>
+            <p>R$ <span class="bold">157,89</span></p>
+            <a href="#" class="btn">Comprar</a>
+        </div>
+        <div class="card">
+            <div class="product-image" id="img-4"></div>
+            <h3>Sneaker 4</h3>
+            <p>Sneaker da melhor qualidade ... (ler mais!)</p>
+            <p>R$ <span class="bold">157,89</span></p>
+            <a href="#" class="btn">Comprar</a>
+        </div>
+        <div class="card">
+            <div class="product-image" id="img-1"></div>
+            <h3>Sneaker 5</h3>
+            <p>Sneaker da melhor qualidade ... (ler mais!)</p>
+            <p>R$ <span class="bold">557,89</span></p>
+            <a href="#" class="btn">Comprar</a>
+        </div>
+        <div class="card">
+            <div class="product-image" id="img-6"></div>
+            <h3>Sneaker 6</h3>
+            <p>Sneaker da melhor qualidade ... (ler mais!)</p>
+            <p>R$ <span class="bold">157,89</span></p>
+            <a href="#" class="btn">Comprar</a>
+        </div>
+    </section>
+</main>
+
+
     <!-- Rodape -->
-    <footer>
-        <div class="Logo">
-            <p><span class="bold">Homenagendo Famosos</span></p>
-            &copy;2022
-        </div>
-        <div>
-            <h4 class="cntt">Contatos</h4>
-            <ul class="">
-                <li><a href="#">Whatsapp</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-            </ul>
-        </div>
+    <footer>    
+        <p><span class="bold">Galeria dos Sneakers</span></p>
+        &copy; 2022
     </footer>
 </body>
 </html>
